# agentic-sre

./: .gitignore  README.md  main.py  pyproject.toml  skills-lock.json
agents/: rca_agent.py  remediation_agent.py
backend/: README.md  main.py  pyproject.toml
backend/adapters/: __init__.py  alertmanager.py  base.py  github.py  loki.py  prometheus.py
backend/agents/: __init__.py  prompts.py  rca_agent.py  remediation_agent.py
backend/api/: __init__.py  main.py
backend/domain/: __init__.py  exceptions.py  schemas.py
backend/pipeline/: __init__.py  compression.py  correlation.py
backend/tests/: __init__.py  test_adapters.py
backend/tests/mock_payloads/: bad_deployment.json  db_bottleneck.json  memory_leak.json
backend/workflows/: __init__.py  state_machine.py
